--- a/core/app/views/DeliverPlans/show.html
+++ b/core/app/views/DeliverPlans/show.html
@@ -19,24 +19,33 @@
       <table class="table table-condensed table-bordered">
         <tr>
           <th>Id</th>
-          <td colspan="2">
+          <td>
             <span id="deliverymentId">${dp.id}</span>
             <input type="hidden" name="dp.id" value="${dp.id}">
           </td>
-        </tr>
 
-        <tr>
           <th><span style="color:red">*</span>出货单名称</th>
           <td>
             <input type="text" class="span10" name="dp.name" value="${dp.name}" required>
           </td>
+        </tr>
 
+        <tr>
           <th><span style="color:red">*</span>供应商</th>
           <td>
             <select name="dp.cooperator.id" class="selectize" style="width:150px;">
               <option>请选择</option>
             #{list items:cooperators, as:'c'}
               <option ${c.id == dp.cooperator?.id} value="${c.id}">${c.name}</option>
+            #{/list}
+            </select>
+          </td>
+
+          <th><span style="color:red">*</span>报关类型</th>
+          <td>
+            <select name="dp.clearanceType" class="" style="width:90px;">
+            #{list items:models.procure.DeliverPlan.CT.values(), as:'ct'}
+              <option ${ct == dp.clearanceType} value="${ct.name()}">${ct.label()}</option>
             #{/list}
             </select>
           </td>
@@ -84,7 +93,7 @@
 <form action="#" id="bulkpost" method="POST">
   <div class="row-fluid">
     <div class="span12" id="unit_list">
-    #{render 'ProcureUnits/_unit_list.html', units:dp.units, checkbox:true, key:'delivery', delivery:true,deliveryplan:true/}
+    #{render 'DeliverPlans/_units.html', units: dp.units, key: 'delivery'/}
     </div>
   </div>
   <div class="row-fluid">
@@ -105,7 +114,7 @@
 <div class="row-fluid">
   <div class="span12">
     <input type="hidden" name="dp.id" value="${dp.id}">
-      #{render 'ProcureUnits/_unit_list.html', units:plan_units, checkbox:true, key:'plan', deliveryplan:true/}
+      #{render 'DeliverPlans/_units.html', units: plan_units, key: 'plan'/}
   </div>
 </div>
 <div class="row-fluid">
