--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -100,7 +100,7 @@
 
   <div class="row-fluid">
     <div class="span12" id="unit_list">
-    #{render 'ProcureUnits/_unit_list.html', units:dmt.units, checkbox:true, key:'delivery', delivery:true/}
+    #{render 'Deliveryments/_units.html', units:dmt.units, key: 'delivery'/}
     </div>
   </div>
   <div class="row-fluid">
@@ -289,7 +289,7 @@
 <div class="row-fluid">
   <div class="span12">
     <input type="hidden" name="dmt.id" value="${dmt.id}">
-      #{render 'ProcureUnits/_unit_list.html', units:plan_units, checkbox:true, key:'plan'/}
+      #{render 'Deliveryments/_units.html', units: plan_units, key: 'plan'/}
   </div>
 </div>
 <div class="row-fluid">
