--- a/core/app/views/DeliverPlans/index.html
+++ b/core/app/views/DeliverPlans/index.html
@@ -84,8 +84,76 @@
             <td>#{time_tooltip time:dp.createDate/}</td>
           </tr>
           <tr id="dp_${dp_index}" style="display:none;">
-            <td colspan="12" style="padding:0;border:none">
-                #{render 'ProcureUnits/_unit_list.html', units:dp.units, norecord: true, deliveryplan:true/}
+            <td colspan="14" style="padding:0;border:none">
+              <table class="table table-condensed table-bordered">
+                <tr>
+                  <th style="width:40px;">采购计划</th>
+                  <th>Selling</th>
+                  <th>Sku</th>
+                  <th style="width:10%;">产品名称</th>
+                  <th>采购单</th>
+                  <th>FBA</th>
+                  <th>去往仓库</th>
+                  <th>数量(计划/交货/入库)</th>
+                  <th>预计交货时间</th>
+                  <th>实际交货时间</th>
+                  <th>FnSku</th>
+                  <th>报关类型</th>
+                  <th>运输方式</th>
+                  <th>预计运输时间</th>
+                  <th>状态</th>
+                  <th>创建时间</th>
+                  <th>创建人</th>
+                </tr>
+                  #{list items:dp.units, as:'unit'}
+                    <tr>
+                      <td>
+                        <a href="/ProcureUnits/index?p.search=${unit.id}" target="_blank">${unit.id}</a>
+                      </td>
+                      <td class="selling_id">
+                        <a href="@{Sellings.selling(unit.selling?.sellingId)}" target="_blank">${unit.selling?.sellingId}</a>
+                      </td>
+                      <td>
+                        <a href="@{Products.show(unit.sku)}" target="_blank">${unit.sku}</a>
+                      </td>
+                      <td>${unit.product.abbreviation}</td>
+                      <td>
+                          #{if unit.deliveryment}
+                            <a href="@{Deliveryments.show(unit.deliveryment.id)}">${unit.deliveryment.id}</a>
+                          #{/if}
+                      </td>
+                      <td>${unit.fba?.shipmentId}</td>
+                      <td>${unit.whouse?.name()}</td>
+                      <td>
+                          #{set qtys: unit.qtys()/}
+                        <span>${qtys._1 == null ? 0 : qtys._1}</span>
+                        /<span style="${qtys._1 != null && qtys._2 != null && qtys._2 < qtys._1 ? 'color:red' : ''}">${qtys._2 == null ? 0 : qtys._2}</span>
+                        /<span style="${qtys._2 != null && qtys._3 != null && qtys._3 < qtys._2 ? 'color:red' : ''}">${qtys._3 == null ? 0 : qtys._3}</span>
+                      </td>
+                      <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
+                      <td>#{time_tooltip time:unit.attrs.deliveryDate/}</td>
+                      <td>
+                        <!-- FnSku 下载 Label -->
+                          #{if unit.selling?.fnSku}
+                            <a href="@{Sellings.sellingLabel(unit.sid)}" class="btn btn-success btn-block">
+                              <i class="icon-download-alt"></i> ${unit.selling.fnSku}
+                            </a>
+                          #{/if}
+                          #{elseif unit.selling != null}
+                            <a class="btn btn-warning btn-block" href="@{Sellings.selling()}/${unit.selling?.sellingId}">
+                              补全 FnSku
+                            </a>
+                          #{/elseif}
+                      </td>
+                      <td>${unit.clearanceType?.label()}</td>
+                      <td style="color:${unit.shipType.rgb()}">${unit.shipType?.label()}</td>
+                      <td>#{time_tooltip time:unit.attrs.planShipDate /}</td>
+                      <td style="background:${unit.stage.rgb()}">${unit.stage.label()}</td>
+                      <td>#{time_tooltip time:unit.createDate/}</td>
+                      <td>${unit.creator?.username}</td>
+                    </tr>
+                  #{/list}
+              </table>
             </td>
           </tr>
         #{/list}
