--- a/core/app/views/Deliveryments/index.html
+++ b/core/app/views/Deliveryments/index.html
@@ -152,8 +152,78 @@
           <td>${dmt.handler.username}</td>
         </tr>
         <tr id="dmt_${dmt_index}" style="display:none;">
-          <td colspan="12" style="padding:0;border:none">
-              #{render 'ProcureUnits/_unit_list.html', units:dmt.units, norecord: true/}
+          <td colspan="14" style="padding:0;border:none">
+            <table class="table table-condensed table-bordered">
+              <tr>
+                <th style="width:40px;">采购计划</th>
+                <th>Selling</th>
+                <th>Sku</th>
+                <th style="width:10%;">产品名称</th>
+                <th>数量(计划/交货/入库)</th>
+                <th>预计交货时间</th>
+                <th>实际交货时间</th>
+                <th>入库时间</th>
+                <th>单价</th>
+                <th>总价</th>
+                <th>剩余请款额</th>
+                <th>状态</th>
+                <th>FBA</th>
+                <th>FnSku</th>
+                <th>去往仓库</th>
+                <th>运输方式</th>
+                <th>预计运输时间</th>
+                <th>质检结果</th>
+                <th>创建时间</th>
+                <th>创建人</th>
+              </tr>
+                #{list items:dmt.units, as:'unit'}
+                  <tr>
+                    <td>
+                      <a href="/ProcureUnits/index?p.search=${unit.id}" target="_blank">${unit.id}</a>
+                    </td>
+                    <td class="selling_id">
+                      <a href="@{Sellings.selling(unit.selling?.sellingId)}" target="_blank">${unit.selling?.sellingId}</a>
+                    </td>
+                    <td>
+                      <a href="@{Products.show(unit.sku)}" target="_blank">${unit.sku}</a>
+                    </td>
+                    <td>${unit.product.abbreviation}</td>
+                    <td>
+                        #{set qtys: unit.qtys()/}
+                      <span>${qtys._1 == null ? 0 : qtys._1}</span>
+                      /<span style="${qtys._1 != null && qtys._2 != null && qtys._2 < qtys._1 ? 'color:red' : ''}">${qtys._2 == null ? 0 : qtys._2}</span>
+                      /<span style="${qtys._2 != null && qtys._3 != null && qtys._3 < qtys._2 ? 'color:red' : ''}">${qtys._3 == null ? 0 : qtys._3}</span>
+                    </td>
+                    <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
+                    <td>#{time_tooltip time:unit.attrs.deliveryDate/}</td>
+                    <td>#{time_tooltip time:unit.inboundRecord()?.completeDate/}</td>
+                    <td>${unit.attrs.currency.symbol()} ${new java.math.BigDecimal(unit.attrs.price).setScale(2,4).floatValue().format('#,###.##')}</td>
+                    <td>${unit.attrs.currency.symbol()} ${new java.math.BigDecimal(unit.qty() * unit.attrs.price).setScale(2,4).floatValue().format('#,###.##')}</td>
+                    <td>${unit.attrs.currency.symbol()} ${new java.math.BigDecimal(unit.leftAmount()).setScale(2,4).floatValue().format('#,###.##')}</td>
+                    <td style="background:${unit.stage.rgb()}">${unit.stage.label()}</td>
+                    <td>${unit.fba?.shipmentId}</td>
+                    <td>
+                      <!-- FnSku 下载 Label -->
+                        #{if unit.selling?.fnSku}
+                          <a href="@{Sellings.sellingLabel(unit.sid)}" class="btn btn-success btn-block">
+                            <i class="icon-download-alt"></i> ${unit.selling.fnSku}
+                          </a>
+                        #{/if}
+                        #{elseif unit.selling != null}
+                          <a class="btn btn-warning btn-block" href="@{Sellings.selling()}/${unit.selling?.sellingId}">
+                            补全 FnSku
+                          </a>
+                        #{/elseif}
+                    </td>
+                    <td>${unit.whouse?.name()}</td>
+                    <td style="color:${unit.shipType.rgb()}">${unit.shipType?.label()}</td>
+                    <td>#{time_tooltip time:unit.attrs.planShipDate /}</td>
+                    <td>${unit.result()}</td>
+                    <td>#{time_tooltip time:unit.createDate/}</td>
+                    <td>${unit.creator?.username}</td>
+                  </tr>
+                #{/list}
+            </table>
           </td>
         </tr>
       #{/list}
