--- a/core/app/views/ProcureUnits/index.html
+++ b/core/app/views/ProcureUnits/index.html
@@ -135,7 +135,7 @@
           <td>
             <label class="checkbox">
               <input type="checkbox" name="pids" value="${unit.id}" class="unit" id="checkbox_${unit.id}"
-                     boxNum="${unit.recommendBoxNum()}">
+                     boxNum="${unit.recommendBoxNum()}" data-stage="${unit.stage.name()}">
             </label>
           </td>
           <td>${unit.id}</td>
