--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -7,7 +7,7 @@
   <th style="width:100px;">SKU</th>
   <td>
     <input type="text" name="unit.product.sku" id="unit_sku" value="${unit.selling?.listing?.product?.sku}"
-    #{if unit.selling?.listing?.product?.sku} readonly #{/if}required>
+    #{if unit.selling?.listing?.product?.sku} readonly #{/if}required autocomplete="off">
   </td>
 </tr>
 <tr>
