--- a/core/app/views/ProcureUnits/indexForMarket.html
+++ b/core/app/views/ProcureUnits/indexForMarket.html
@@ -14,7 +14,7 @@
 </ul>
 #{/info_row}
 <div class="row-fluid">
-  <form action="@{ProcureUnits.index()}" method="get" class="search_form" id="search_Form">
+  <form action="@{ProcureUnits.indexForMarket()}" method="get" class="search_form" id="search_Form">
     <div class="row-fluid">
       <div class="span12">
         <div class="input-prepend input-append inline">
@@ -51,47 +51,25 @@
         #{/list}
         </select>
 
-        <select name="p.cooperatorId" class="inline selectize" style="width:130px;">
-          <option value="">供应商</option>
-        #{list items:cooperators, as:'cop'}
-          <option ${cop.id == p.cooperatorId ? 'selected' : ''} value="${cop.id}">${cop.name}</option>
-        #{/list}
-        </select>
-
-        <div class="inline">
-          <select name="p.categories" class="inline" multiple data-nonSelectedText="产品线">
-          #{list items:categories, as:'c'}
-            <option ${p.categories.contains(c) ? 'selected' : ''} value="${c}">${c}</option>
-          #{/list}
-          </select>
-        </div>
-
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" class="input-medium" name="p.search" value="${p.search}" rel="popover"
+          <input type="text" class="input-medium" name="p.search" value="${p.search}" rel="popover" style="width:200px;"
                  content="可搜索 ID、SellingId、SKU、FBA、产品名称">
           <input type="hidden" name="p.page" value="${p.page}">
           <input type="hidden" name="p.unitIds" id="unitIds"/>
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
-
-        <div class="inline">
-
-          <input type="button" class="btn btn-primary" id="batch_create_fba_btn" value="批量创建FBA"
-                 data-url="@{ProcureUnits.batchCreateFBA()}">
-          <a href="@{ProcureUnits.blank()}" class="btn btn-success" data-disable-with="loading">创建采购计划</a>
-        #{power.ck "procures.createdeliveryment"}
-          <a target="_blank" href="javascript:void(0)" class="btn btn-info" id="createdeliveryment">创建采购单</a>
-        #{/power.ck}
-          <a target="_blank" href="javascript:void(0)" class="btn btn-info" id="createdeliverplan">创建出货单</a>
-          <a target="_blank" class="btn btn-info" rel="popover" content="将选中的数据，按照日期-工厂名称进行压缩打包 " id="downloadFBAZIP">
-            下载 FBA ZIP
-          </a>
-          <a target="_blank" href="@{ProcureUnits.exportLogs()}" class="btn btn-info">导出修改日志</a>
-        #{power.ck "procures.downloadreports"}
-          <a href="javascript:void(0)" id="download_excel" class="btn btn-info">导出采购计划</a>
-        #{/power.ck}
-        </div>
+      </div>
+    </div>
+    <div class="row-fluid">
+      <div class="span12">
+        <input type="button" class="btn btn-primary" id="batch_create_fba_btn" value="批量创建FBA"
+               data-url="@{ProcureUnits.batchCreateFBA()}">
+        <a href="@{ProcureUnits.blank()}" class="btn btn-success" data-disable-with="loading">创建采购计划</a>
+        <a target="_blank" href="@{ProcureUnits.exportLogs()}" class="btn btn-info">导出修改日志</a>
+      #{power.ck "procures.downloadreports"}
+        <a href="javascript:void(0)" id="download_excel" class="btn btn-info">导出采购计划</a>
+      #{/power.ck}
       </div>
     </div>
   #{include 'Deliveryments/box_number_model.html'/}
@@ -101,7 +79,7 @@
 <form method="post" id="create_deliveryment">
   <div class="row-fluid">
     <div class="span12">
-    #{render 'ProcureUnits/_unit_list.html', units: p.query(), p:p, checkbox:true/}
+    #{render 'ProcureUnits/_unit_market_list.html', units: p.query(), p:p, checkbox:true/}
     </div>
   </div>
 
