--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -30,7 +30,7 @@
                   <li><a href="@{Listings.trackedListings()}">Tracked Listing</a></li>
                 #{/power.ck}
                 #{power.ck "procures.index"}
-                  <li><a href="@{ProcureUnits.index()}">采购计划</a></li>
+                  <li><a href="@{ProcureUnits.indexForMarket()}">采购计划</a></li>
                 #{/power.ck}
                 #{power.ck "sellings.index"}
                   <li><a href="@{Sellings.index()}">Selling列表</a></li>
