--- a/core/app/views/ProcureUnits/showStockBySellingOrSku.html
+++ b/core/app/views/ProcureUnits/showStockBySellingOrSku.html
@@ -1,40 +1,54 @@
 <table class="table table-condensed table-bordered" style="background-color: #ffe4c4" bgcolor="#">
   <tr>
-    <td rowspan="2">总数</td>
-    <td colspan="${map.get("td_num")}" style="text-align:center">工厂中</td>
-    <td rowspan="2">总数</td>
-    <td colspan="${stock_map.get("td_num")}" style="text-align:center">仓库中</td>
+  #{if map.get("total_num") > 0}
+    <td rowspan="2" style="width:80px;"><b>总数</b></td>
+    <td colspan="${map.get("td_num")}" style="text-align:center"><b>工厂中</b></td>
+  #{/if}
+  #{if stock_map.get("total_num") > 0}
+    <td rowspan="2"><b>仓库总数</b></td>
+    <td colspan="${stock_map.get("td_num")}" style="text-align:center"><b>仓库中</b></td>
+  #{/if}
   </tr>
+
   <tr>
-  #{list map.keySet(), as:'key'}
-      #{if key != "total_num" && key != "td_num" && key == '无条码无FBA'}
-        <td>${key}</td>
-      #{/if}
-  #{/list}
-  #{list map.keySet(), as:'key'}
-      #{if key != "total_num" && key != "td_num" && key != '无条码无FBA'}
-        <td>${key}</td>
-      #{/if}
-  #{/list}
-  #{list stock_map.keySet(), as:'key'}
-      #{if key != "total_num" && key != "td_num" && key == '无条码无FBA'}
-        <td>${key}</td>
-      #{/if}
-  #{/list}
-  #{list stock_map.keySet(), as:'key'}
-      #{if key != "total_num" && key != "td_num" && key != '无条码无FBA'}
-        <td>${key}</td>
-      #{/if}
-  #{/list}
+  #{if map.get("total_num") > 0}
+      #{list map.keySet(), as:'key'}
+          #{if key != "total_num" && key != "td_num" && key == '无条码无FBA'}
+            <td>${key}</td>
+          #{/if}
+      #{/list}
+      #{list map.keySet(), as:'key'}
+          #{if key != "total_num" && key != "td_num" && key != '无条码无FBA'}
+            <td>${key}</td>
+          #{/if}
+      #{/list}
+  #{/if}
+  #{if stock_map.get("total_num") > 0}
+      #{list stock_map.keySet(), as:'key'}
+          #{if key != "total_num" && key != "td_num" && key == '无条码无FBA'}
+            <td>${key}</td>
+          #{/if}
+      #{/list}
+      #{list stock_map.keySet(), as:'key'}
+          #{if key != "total_num" && key != "td_num" && key != '无条码无FBA'}
+            <td>${key}</td>
+          #{/if}
+      #{/list}
+  #{/if}
   </tr>
+
   <tr>
+  #{if map.get("total_num") > 0}
     <td>${map.get("total_num")}</td>
+  #{/if}
   #{list map.keySet(), as:'key'}
       #{if key != "total_num" && key != "td_num"}
         <td>${map.get(key)}</td>
       #{/if}
   #{/list}
+  #{if stock_map.get("total_num") > 0}
     <td>${stock_map.get("total_num")}</td>
+  #{/if}
   #{list stock_map.keySet(), as:'key'}
       #{if key != "total_num" && key != "td_num"}
         <td>${stock_map.get(key)}</td>
