规范 Feed Product Type 字段

--- a/core/app/views/Sellings/_amazon.html
+++ b/core/app/views/Sellings/_amazon.html
@@ -78,7 +78,7 @@
         #{hidden_field id: 'accountId', name: 's.account.id', value: s.account.id /}
         #{text_field id:'market', name: 's.market', readonly: true, label:'市场', value: s.market.name() /}
         #{select_field id: 'templateType', name: 's.aps.templateType', label: '模板类型', items: ['Computers',
-        'ConsumerElectronics', 'Wireless', 'HomeImprovement', 'Home', 'Games', 'Sports', 'Lighting'], value: s.aps.templateType/}
+        'ConsumerElectronics', 'Wireless', 'HomeImprovement', 'Home', 'Games', 'Lighting'], value: s.aps.templateType/}
         #{select_field id:'feedProductType', name: 's.aps.feedProductType', label: 'Feed Product Type', items:[s.aps
         .feedProductType], value: s.aps.feedProductType, native: true /}
         #{checkbox_text_field id:'salePrice',checkboxname: 'p.saleprice', name: 's.aps.salePrice', label: '优惠销售价格',
