*  button 取消 data-loading

--- a/core/app/views/ProcureUnits/index.html
+++ b/core/app/views/ProcureUnits/index.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="inline">
-          <a href="@{ProcureUnits.blank()}" class="btn btn-success" data-disable-with="loading">创建采购计划</a>
+          <a href="@{ProcureUnits.blank()}" class="btn btn-success">创建采购计划</a>
         #{power.ck "procures.createdeliveryment"}
           <a target="_blank" href="javascript:void(0)" class="btn btn-success" id="createdeliveryment">创建采购单</a>
         #{/power.ck}
