--- a/core/app/views/ProcureUnits/index.html
+++ b/core/app/views/ProcureUnits/index.html
@@ -157,24 +157,10 @@
           <td>#{time_tooltip time:unit.attrs.deliveryDate/}</td>
           <td>#{time_tooltip time:unit.inboundRecord()?.completeDate/}</td>
           <td>${unit.cooperator?.name}</td>
-            #{set price: unit.attrs?.price/}
-            #{set qty: unit.qty()/}
-          <td>
-              #{if price != null}
-                ${unit.attrs?.currency?.symbol()} ${new java.math.BigDecimal(price).setScale(2,4).floatValue().format('#,###.##')}
-              #{/if}
-          </td>
-          <td>
-              #{if qty != null && price != null}
-                ${unit.attrs?.currency?.symbol()} ${new java.math.BigDecimal(qty * price).setScale(2,4).floatValue().format('#,###.##')}
-              #{/if}
-          </td>
-          <td>
-            #{set leftAmount: unit.leftAmount()/}
-            #{if leftAmount != null}
-              ${unit.attrs?.currency?.symbol()} ${new java.math.BigDecimal(leftAmount).setScale(2,4).floatValue().format('#,###.##')}
-            #{/if}
-          </td>
+            #{set prices: unit.prices()/}
+          <td>${unit.attrs?.currency?.symbol()} ${prices?._1?.format('#,###.##')}</td>
+          <td>${unit.attrs?.currency?.symbol()} ${prices?._2?.format('#,###.##')}</td>
+          <td>${unit.attrs?.currency?.symbol()} ${prices?._3?.format('#,###.##')}</td>
           <td>${unit.fba?.shipmentId}</td>
           <td>${unit.whouse?.name()}</td>
           <td>#{time_tooltip time:unit.attrs.planShipDate /}</td>
