--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -69,7 +69,7 @@
             <br/>
           #{power.ck "products.edit"}
               #{if dmt.canBeEdit()}
-                <button class="btn btn-primary">更新</button>
+                <button class="btn btn-primary">提交</button>
               #{/if}
           #{/power.ck}
           #{power.ck 'deliveryments.cancel'}
@@ -103,12 +103,14 @@
   </div>
   <div class="row-fluid">
     <div class="btn-toolbar">
-    #{power.ck "products.edit"}
-      <a href="javascript:void(0);" data-url='@{Deliveryments.delunits(dmt.id)}' data-method="DELETE"
-         id="delunit_form_submit" rel="popover" content="将 DELIVERY 状态的采购计划从采购单中移除出去" placement="right" class="btn btn-warning">
-        解除
-      </a>
-    #{/power.ck}
+    #{ifnot dmt.isLock()}
+        #{power.ck "products.edit"}
+          <a href="javascript:void(0);" data-url='@{Deliveryments.delunits(dmt.id)}' data-method="DELETE"
+             id="delunit_form_submit" rel="popover" content="将 DELIVERY 状态的采购计划从采购单中移除出去" placement="right" class="btn btn-warning">
+            解除
+          </a>
+        #{/power.ck}
+    #{/ifnot}
     #{power.ck 'fbas.deploytoamazon'}
       <a href="javascript:void(0);" data-url='@{FBAs.deploysToAmazon(dmt.id)}' data-method="POST" id="deployFBAs" class="btn btn-success">
         批量创建 FBA
@@ -171,7 +173,7 @@
         <tr>
           <th>交易条款<br>(供应商)</th>
           <td colspan="3">
-          <textarea rows="8" name="excel.tradeTerms" id="excel_tradeTerms" class="span12"> ${dmt.cooperator?.tradingTerms}</textarea>
+            <textarea rows="8" name="excel.tradeTerms" id="excel_tradeTerms" class="span12"> ${dmt.cooperator?.tradingTerms}</textarea>
           </td>
           <th>产品要求<br>(产品线)</th>
           <td colspan="3">
@@ -278,9 +280,6 @@
 *{#{/power.ck}}*
 
 
-
-
-
 #{info_row title:'可添加进入[采购单]的[采购单元]'/}
 #{form @Deliveryments.addunits(dmt.id), method: 'POST'}
 <div class="row-fluid">
@@ -293,9 +292,11 @@
   <div class="span12">
     <div class="pull-left input-prepend input-append">
       <span class="add-on" rel="popover" content="将 PLAN 状态的采购计划添加到采购单中" placement="right"><i class="icon-question-sign"></i></span>
-        #{power.ck "products.edit"}
-          <button id="plan_form_submit" class="btn btn-primary">添加</button>
-        #{/power.ck}
+        #{ifnot dmt.isLock()}
+            #{power.ck "products.edit"}
+              <button id="plan_form_submit" class="btn btn-primary">添加</button>
+            #{/power.ck}
+        #{/ifnot}
     </div>
   </div>
 </div>
