--- a/core/app/views/DeliverPlans/show.html
+++ b/core/app/views/DeliverPlans/show.html
@@ -99,13 +99,14 @@
   </div>
   <div class="row-fluid">
     <div class="btn-toolbar">
-    #{power.ck "products.edit"}
-      <a href="javascript:void(0);" data-url='@{DeliverPlans.delunits(dp.id)}' data-method="DELETE"
-         id="delunit_form_submit" rel="popover" content="将 DELIVERY 状态的采购计划从采购单中移除出去" placement="right" class="btn btn-warning">
-        解除
-      </a>
-    #{/power.ck}
-
+    #{ifnot dp.isLocked()}
+        #{power.ck "products.edit"}
+          <a href="javascript:void(0);" data-url='@{DeliverPlans.delunits(dp.id)}' data-method="DELETE"
+             id="delunit_form_submit" rel="popover" content="将 DELIVERY 状态的采购计划从采购单中移除出去" placement="right" class="btn btn-warning">
+            解除
+          </a>
+        #{/power.ck}
+    #{/ifnot}
     #{power.ck 'fbas.deploytoamazon'}
       <a href="javascript:void(0);" data-url='@{DeliverPlans.deploysToAmazon(dp.id)}' data-method="POST" id="deployFBAs" class="btn btn-success">
         批量创建 FBA
@@ -133,9 +134,11 @@
   <div class="span12">
     <div class="pull-left input-prepend input-append">
       <span class="add-on" rel="popover" content="将 PLAN 状态的采购计划添加到采购单中" placement="right"><i class="icon-question-sign"></i></span>
-        #{power.ck "products.edit"}
-          <button id="plan_form_submit" class="btn btn-primary">添加</button>
-        #{/power.ck}
+        #{ifnot dp.isLocked()}
+            #{power.ck "products.edit"}
+              <button id="plan_form_submit" class="btn btn-primary">添加</button>
+            #{/power.ck}
+        #{/ifnot}
     </div>
   </div>
 </div>
