*  尝试补全出货单的供应商

--- a/core/app/views/DeliverPlans/show.html
+++ b/core/app/views/DeliverPlans/show.html
@@ -32,7 +32,7 @@
 
         <tr>
           <th>供应商</th>
-          <td>${dp.cooperator?.name}</td>
+          <td>${dp.cooperator()?.name}</td>
 
           <th><span style="color:red">*</span>报关类型</th>
           <td>
