*  出货单的供应商由采购计划决定

--- a/core/app/views/ProcureUnits/index.html
+++ b/core/app/views/ProcureUnits/index.html
@@ -158,7 +158,7 @@
           <td>#{time_tooltip time:unit.attrs.deliveryDate/}</td>
           <td>#{time_tooltip time:unit.inboundRecord()?.completeDate/}</td>
           <td>
-            <select name="unitCooperator" class="selectize" style="width:100px;">
+            <select name="unitCooperator" style="width:100px;" ${unit.deliveryment != null ? 'disabled' : ''}>
                 #{list items:unit.availableCooperators(), as:'cop'}
                   <option ${cop.id == unit.cooperator?.id ? 'selected' : ''} value="${cop.id}">${cop.name}</option>
                 #{/list}
