--- a/core/app/views/Sellings/_attach.html
+++ b/core/app/views/Sellings/_attach.html
@@ -1,5 +1,4 @@
 <div class="row-fluid">
-  <iframe frameBorder=0 scrolling=no src='https://e.easyacc.com:8081/index.php?explorer/index&path=SKU/${s
-  .merchantSKU.split(",")[0]}' width=
-  "100%" height="1000px"></iframe>
+  <iframe frameBorder=0 scrolling=no src='https://kod.easya.cc/index.php?explorer/index&path=SKU/${s.merchantSKU.split(",")[0]}'
+          width="100%" height="1000px"></iframe>
 </div>
