--- a/core/app/views/ProcureUnits/showStockBySellingOrSku.html
+++ b/core/app/views/ProcureUnits/showStockBySellingOrSku.html
@@ -41,18 +41,32 @@
   #{if map.get("total_num") > 0}
     <td>${map.get("total_num")}</td>
   #{/if}
+
   #{list map.keySet(), as:'key'}
-      #{if key != "total_num" && key != "td_num"}
+      #{if key != "total_num" && key != "td_num" && key == '无条码无FBA'}
         <td>${map.get(key)}</td>
       #{/if}
   #{/list}
+  #{list map.keySet(), as:'key'}
+      #{if key != "total_num" && key != "td_num" && key != '无条码无FBA'}
+        <td>${map.get(key)}</td>
+      #{/if}
+  #{/list}
+
+
   #{if stock_map.get("total_num") > 0}
     <td>${stock_map.get("total_num")}</td>
   #{/if}
   #{list stock_map.keySet(), as:'key'}
-      #{if key != "total_num" && key != "td_num"}
+      #{if key != "total_num" && key != "td_num" && key == '无条码无FBA'}
         <td>${stock_map.get(key)}</td>
       #{/if}
   #{/list}
+  #{list stock_map.keySet(), as:'key'}
+      #{if key != "total_num" && key != "td_num" && key != '无条码无FBA'}
+        <td>${stock_map.get(key)}</td>
+      #{/if}
+  #{/list}
+
   </tr>
 </table>
